# wcribbz

./: CMakeLists.txt  COPYING
.devcontainer/: setup.sh
.github/workflows/: main.yml  nightly.yml
ci/: setup-win32-build.sh  test.sh
cmake/: AddClarTest.cmake  SelectGSSAPI.cmake  SelectHTTPSBackend.cmake  SelectHashes.cmake  SelectHttpParser.cmake  SelectSSH.cmake
docs/: buffers.md  changelog.md
examples/: CMakeLists.txt  fetch.c
fuzzers/: CMakeLists.txt  commit_graph_fuzzer.c  midx_fuzzer.c  packfile_fuzzer.c
include/git2/: checkout.h  clone.h  common.h  deprecated.h  diff.h  errors.h  odb_backend.h  oid.h  remote.h  stash.h  submodule.h  version.h
include/git2/sys/: filter.h
src/: CMakeLists.txt  branch.c  commit_graph.c  commit_graph.h  config_file.c  crlf.c  diff.c  diff_file.c  diff_generate.c  diff_print.c  diff_tform.c  features.h.in  filebuf.c  filter.c  fs_path.c  futils.c  futils.h  hash.c  hash.h  ident.c  index.c  indexer.c  merge.c  midx.c  midx.h  object.c  odb.c  odb_loose.c  oid.c  oid.h  pack-objects.c  pack.c  pack.h  rand.c  rand.h  refdb_fs.c  remote.c  repository.c  reset.c  revparse.c  (+2 more)
src/cli/: CMakeLists.txt  README.md  cli.h  cmd_cat_file.c  cmd_clone.c  cmd_help.c  error.h  main.c  opt.c  opt.h  opt_usage.c  opt_usage.h  progress.c  progress.h
src/hash/: sha.h  sha1.h
src/libgit2/: CMakeLists.txt  apply.c  checkout.c  cherrypick.c  clone.c  commit_graph.c  common.h  diff.c  diff_xdiff.c  fetch.c  hashsig.c  indexer.c  libgit2.c  merge.c  midx.c  odb.c  odb_pack.c  pack-objects.c  pack-objects.h  pack.c  pack.h  push.c  rebase.c  remote.c  repository.c  revert.c  submodule.c  tree.c
src/libgit2/streams/: mbedtls.c  openssl.c  schannel.c  schannel.h  stransport.c
src/libgit2/transports/: smart.c  smart.h  smart_pkt.c  smart_protocol.c  ssh.c  ssh_exec.c  ssh_libssh2.c
src/streams/: openssl.c  openssl_dynamic.c  openssl_dynamic.h  openssl_legacy.c
src/transports/: http.c  smart_protocol.c
src/util/: CMakeLists.txt  date.c  fs_path.c  fs_path.h  futils.h  git2_util.h  hash.h  net.c  net.h  path.c  path.h  posix.h  process.h  rand.c  sighandler.h  str.c  str.h  strlist.c  strlist.h  strvec.c  strvec.h  util.c  util.h  vector.h  zstream.h
src/util/unix/: map.c  posix.h  process.c  sighandler.c
src/util/win32/: findfile.h  path_w32.h  posix.h  posix_w32.c  process.c  sighandler.c
src/win32/: findfile.c  path_w32.c
tests/: CMakeLists.txt  clar_libgit2.h  generate.py
tests/checkout/: tree.c
tests/cherrypick/: workdir.c
tests/clar/: clar_libgit2_timer.c
tests/core/: copy.c  gitstr.c  oid.c  path.c  pool.c  sha1.c  sha256.c
tests/diff/: parse.c  workdir.c
tests/filter/: custom_helpers.c  custom_helpers.h  wildcard.c
tests/libgit2/: CMakeLists.txt
tests/libgit2/checkout/: binaryunicode.c  conflict.c  icase.c  index.c  tree.c
tests/libgit2/cherrypick/: workdir.c
tests/libgit2/clone/: local.c  nonetwork.c
tests/libgit2/core/: opts.c
tests/libgit2/index/: tests256.c
tests/libgit2/merge/workdir/: dirty.c  simple.c
tests/libgit2/network/: fetchlocal.c
tests/libgit2/odb/: foreach.c  loose.c  pack_data_one_sha256.h  packed_one.c  packed_one_sha256.c  packedone.c  sorting.c
tests/libgit2/online/: badssl.c  clone.c  fetch.c  push.c  push_util.c  push_util.h
tests/libgit2/path/: validate.c
tests/libgit2/perf/: helper__perf__do_merge.c
tests/libgit2/repo/: init.c  open.c
tests/libgit2/revert/: workdir.c
tests/libgit2/submodule/: update.c
tests/libgit2/worktree/: worktree.c
tests/merge/: files.c
tests/merge/workdir/: simple.c
tests/object/raw/: hash.c  size.c
tests/odb/: largefiles.c
tests/online/: clone.c  fetch.c
tests/pack/: packbuilder.c
tests/refs/: revparse.c
tests/repo/: hashfile.c
tests/revert/: workdir.c
tests/threads/: diff.c
tests/util/: futils.c  path.c  rmdir.c
tests/util/path/: win32.c
tests/util/process/: start.c  win32.c
tests/win32/: longpath.c
